# chaos

./: .editorconfig  .gitignore  Makefile  setup.cfg
chaos/: __init__.py  __main__.py  commands.py  validators.py
chaos/cli/: __init__.py  argument.py  cli.py  command.py  validators.py
chaos/rules_info/: __init__.py  print_rule.py  rule_spec.py
chaos/rules_info/C-A/: C-A1.rule_spec  C-A2.rule_spec  C-A3.rule_spec  C-A4.rule_spec
chaos/rules_info/C-C/: C-C1.rule_spec  C-C2.rule_spec  C-C3.rule_spec
chaos/rules_info/C-F/: C-F1.rule_spec  C-F2.rule_spec  C-F3.rule_spec  C-F4.rule_spec  C-F5.rule_spec  C-F6.rule_spec  C-F7.rule_spec  C-F8.rule_spec  C-F9.rule_spec
chaos/rules_info/C-G/: C-G.rule_spec  C-G1.rule_spec  C-G2.rule_spec  C-G3.rule_spec  C-G4.rule_spec  C-G5.rule_spec  C-G6.rule_spec  C-G7.rule_spec  C-G8.rule_spec  C-G9.rule_spec
chaos/rules_info/C-H/: C-H1.rule_spec  C-H2.rule_spec  C-H3.rule_spec
chaos/rules_info/C-L/: C-L1.rule_spec  C-L2.rule_spec  C-L3.rule_spec  C-L4.rule_spec  C-L5.rule_spec  C-L6.rule_spec
chaos/rules_info/C-O/: C-O1.rule_spec  C-O2.rule_spec  C-O3.rule_spec  C-O4.rule_spec
chaos/rules_info/C-V/: C-V1.rule_spec  C-V2.rule_spec  C-V3.rule_spec
chaos/syntax/: ast.py  parser.py  program.py  token.py  tokeniser.py  tokenizer.py
docs/: README.md  rulespec.sublime-syntax
docs/rules/C-A/: C-A2.rule_spec
docs/rules/C-C/: C-C1.rule_spec
docs/rules/C-F/: C-F1.rule_spec  C-F3.rule_spec  C-F5.rule_spec  C-F6.rule_spec
docs/rules/C-G/: C-G.rule_spec  C-G9.rule_spec
docs/rules/C-H/: C-H1.rule_spec  (+1 more)
tests/: run.py
(+5 files in other folders)
