[metadata]
name = chaos
version = attr: chaos.__version__
description = An attempt at creating a norminette from scratch
long_description = file: docs/README.md
long_description_content_type = text/markdown
author = attr: chaos.__author__
author_email = edhyjox@gmail.com
url = https://github.com/Sigmanificient/chaos
keywords = epitech,norminette
license = GNU GPLv3
classifiers =
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.10

[options.entry_points]
console_scripts = chaos=chaos.__main__:main
